--- a/rfcs/proposed/numa_support/tbbbind-link-static-hwloc.org
+++ b/rfcs/proposed/numa_support/tbbbind-link-static-hwloc.org
@@ -1,30 +1,30 @@
 # -*- fill-column: 80; -*-
 
-#+title: Link ~tbbbind~ with static HWLOC to improve predictability of NUMA support API
+#+title: Link ~tbbbind~ with Static HWLOC for NUMA API predictability
 
-*Note:* This document is a sub-RFC of the https://github.com/oneapi-src/oneTBB/pull/1535.
-Specifically, the "Increased availability of NUMA support" section. 
+*Note:* This document is a sub-RFC of the [[file:README.md][umbrella RFC about improving NUMA
+support]]. Specifically, the "Increased availability of NUMA support" section.
 
 * Introduction
-oneTBB has a soft dependency on several variants of ~tbbbind~, which 
-the library loads during the initialization stage. Each ~tbbbind~, in turn, has
-a hard dependency on a specific version of the HWLOC library [1, 2]. The soft
-dependency means that the library continues the execution
-even if the system loader fails to resolve the hard dependency on HWLOC for
-~tbbbind~. In this case, oneTBB does not discover the hardware topology. 
-Instead, it defaults to viewing all CPU cores as uniform, consistent with TBB behavior when
-NUMA constraints are not used. As a result, the following code returns the irrelevant values that
-do not reflect the actual topology:
+oneTBB has a soft dependency on several variants of ~tbbbind~, which the library
+loads during the initialization stage. Each ~tbbbind~, in turn, has a hard
+dependency on a specific version of the HWLOC library [1, 2]. The soft
+dependency means that the library continues the execution even if the system
+loader fails to resolve the hard dependency on HWLOC for ~tbbbind~. In this
+case, oneTBB does not discover the hardware topology. Instead, it defaults to
+viewing all CPU cores as uniform, consistent with TBB behavior when NUMA
+constraints are not used. As a result, the following code returns the irrelevant
+values that do not reflect the actual topology:
 
 #+begin_src C++
 std::vector<oneapi::tbb::numa_node_id> numa_nodes = oneapi::tbb::info::numa_nodes();
 std::vector<oneapi::tbb::core_type_id> core_types = oneapi::tbb::info::core_types();
 #+end_src
 
-This lack of valid HW topology, caused by the absence of a third-party library, is
-the major problem with the current oneTBB behavior. The problem lies in the lack of diagnostics
-making it difficult for developers to detect. 
-As a result, the code continues to run but fails to use NUMA as intended. 
+This lack of valid HW topology, caused by the absence of a third-party library,
+is the major problem with the current oneTBB behavior. The problem lies in the
+lack of diagnostics making it difficult for developers to detect. As a result,
+the code continues to run but fails to use NUMA as intended.
 
 Dependency on a shared HWLOC library has the following benefits:
 1. Code reuse with all of the positive consequences out of this, including
@@ -56,17 +56,15 @@ important, it is not always obvious that one of these steps is needed.
 Especially, due to silent behavior in case HWLOC library cannot be found in the
 environment.
 
-The proposal is to reduce the effect of the disadvantage
-of relying on a dynamic HWLOC library. 
-The improvements involve statically linking HWLOC with one of the ~tbbbind~ libraries distributed together
-with oneTBB. At the same time, you retain the flexibility to specify different version of HWLOC library
-if needed.
+The proposal is to reduce the effect of the disadvantage of relying on a dynamic
+HWLOC library. The improvements involve statically linking HWLOC with one of the
+~tbbbind~ libraries distributed together with oneTBB. At the same time, you
+retain the flexibility to specify different version of HWLOC library if needed.
 
-Since HWLOC 1.x is an older version and modern operating
-systems install HWLOC 2.x by default, the probability of users being
-restricted to HWLOC 1.x is relatively small. Thus,
-we can reuse the filename of the ~tbbbind~ library linked to HWLOC 1.x 
-for the library linked against a static HWLOC 2.x.
+Since HWLOC 1.x is an older version and modern operating systems install HWLOC
+2.x by default, the probability of users being restricted to HWLOC 1.x is
+relatively small. Thus, we can reuse the filename of the ~tbbbind~ library
+linked to HWLOC 1.x for the library linked against a static HWLOC 2.x.
 
 * Proposal
 1. Replace the dynamic link of ~tbbbind~ library currently linked
@@ -77,21 +75,20 @@ for the library linked against a static HWLOC 2.x.
    detail the steps for identifying which ~tbbbind~ is being used.
 
 ** Advantages
-1. The proposed behavior introduces a fallback mechanism for resolving
-   the HWLOC library dependency when it is not in the environment, while still
-   preferring user-provided versions. As a result, the problematic oneTBB API usage
-   works as expected, returning an enumerated list
-   of actual NUMA nodes and core types on the system the code is running on,
-   provided that the loaded HWLOC library works on that system and that an
-   application properly distributes all binaries of oneTBB, sets the environment
-   so that the necessary variant of ~tbbbind~ library can be found and loaded.
-2. Dropping support for HWLOC 1.x, does not introduce an additional
-   ~tbbbind~ variant while maintaining support for widely used
-   versions of HWLOC.
+1. The proposed behavior introduces a fallback mechanism for resolving the HWLOC
+   library dependency when it is not in the environment, while still preferring
+   user-provided versions. As a result, the problematic oneTBB API usage works
+   as expected, returning an enumerated list of actual NUMA nodes and core types
+   on the system the code is running on, provided that the loaded HWLOC library
+   works on that system and that an application properly distributes all
+   binaries of oneTBB, sets the environment so that the necessary variant of
+   ~tbbbind~ library can be found and loaded.
+2. Dropping support for HWLOC 1.x, does not introduce an additional ~tbbbind~
+   variant while maintaining support for widely used versions of HWLOC.
 
 ** Disadvantages
-By default, there is still no diagnostics if you fail to correctly setup an environment with your
-version of HWLOC. Although, specifying the ~TBB_VERSION=1~
+By default, there is still no diagnostics if you fail to correctly setup an
+environment with your version of HWLOC. Although, specifying the ~TBB_VERSION=1~
 environment variable helps identify configuration issues quickly.
 
 * Alternative Handling for Missing System Topology
@@ -102,17 +99,16 @@ an exception).
 
 Comparing these alternative approaches to the one proposed.
 ** Common Advantages
-- Explicitly indicates that the functionality being used does not work,
-  instead of failing silently.
-- Avoids the need to distribute an additional variant of ~tbbbind~ library. 
+- Explicitly indicates that the functionality being used does not work, instead
+  of failing silently.
+- Avoids the need to distribute an additional variant of ~tbbbind~ library.
 
 ** Common Disadvantages
 - Requires additional step from the user side to resolve the problem. In other
   words, it does not provide complete solution to the problem.
 
 *** Disadvantages of Issuing a Warning
-- The warning may be unnoticed, especially if standard streams are
-  closed.
+- The warning may be unnoticed, especially if standard streams are closed.
 
 *** Disadvantages of Throwing an Exception
 - May break existing code that does not expect an exception to be thrown.
