Adjust heading levels

--- a/rfcs/proposed/flow_graph_serializers/README.qmd
+++ b/rfcs/proposed/flow_graph_serializers/README.qmd
@@ -49,7 +49,7 @@ library(RColorBrewer)
 source("functions.R")
 ```
 
-## Introduction
+# Introduction
 
 Flow-graph provides a facility to serialize the execution of a node to allow some code that would not otherwise be thread-safe to be executed in parallel graphs.
 Various flow-graph nodes accept a constructor argument that specifies the maximum concurrency the graph can use for that particular node.
@@ -126,7 +126,7 @@ The implementation of the `DB::access()`  function did not change, but by connec
 Note that if the only reason that the bodies of `track_maker` and `cluster_maker` were thread-unsafe was their access to the limited resource indicated by `db_resource` it is no longer necessary to declare that the nodes have concurrency `flow::serial`.
 It may be possible to have the node `track_maker` active at the same time, if the nature of `db_resource` were to allow two tokens to be available, and as long as each activation was given a different token.
 
-## Proposal
+# Proposal
 
 Our proposal is an addition to what already exists and does not break API backwards compatibility.  The proposal consists of:
 1. Introducing the equivalent of a `resource_limiter_node` class template that, when connected with another node, ensures limited access to the resource it represents.
@@ -159,7 +159,7 @@ The node body takes an argument for the input data (i.e. `Hits`) and (optionally
 The node body is invoked only when the `rl_function_node` can obtain exclusive access to one of the resource handles provided by each resource-limiter node (and when a `Hits` message has been sent to it).
 Note that because two GPU handles are available, it is possible to parallelize other work with a GPU as only each *invocation* of the node body requires sole access to a GPU handle.
 
-### `resource_limiter_node` class template
+## `resource_limiter_node` class template
 
 The `resource_limiter_node` class template heuristically looks like:
 
@@ -204,18 +204,18 @@ private:
 where `Handle` represents the type of a resource handle for which tokens can be passed throughout the graph.
 With this implementation, the token is simply a pointer to a handle owned by the resource limiter.
 
-#### C++20 support
+### C++20 support
 
 When compiling with a C++ standard of at least C++20, the `resource_limiter` `Handle` template parameter can be constrained to model a resource-handle concept.
 
-### Resource handles
+## Resource handles
 
-#### User-defined resource handles
+### User-defined resource handles
 
 An example of a user-defined resource handle is the `DB` handle discussed above.
 A handle, in principle, can have an arbitrary structure with unlimited interface, so long as ownership of the handle ultimately reside with the `resource_limiter_node`.
 
-#### `default_resource_handle`
+### `default_resource_handle`
 
 For `rl_function_node` function bodies that do not need to access details of the resource, a default policy can be provided:
 
@@ -225,7 +225,7 @@ resource_limiter_node r{g};
 
 This can be useful if a third-party library supports substantial thread-unsafe interface and there is no obvious API that should be attached to the handle.
 
-### `rl_function_node` constructors
+## `rl_function_node` constructors
 
 We imagine the following constructors could exist
 
@@ -254,7 +254,7 @@ Constructor 3 would be the rarer situation where:
 - the (e.g.) `db_resource` itself may have more than one resource handle, thus permitting some parallelism for that resource
 - the implementation of `fn3`'s user body may need to be serialized for reasons unrelated to the DB resource
 
-## Implementation experience
+# Implementation experience
 
 The image below depicts a system implemented within the https://github.com/knoepfel/meld-serial repository.
 
@@ -461,8 +461,7 @@ tasks |>
   theme_minimal()
 ```
 
-
-### Looking on at calibrations
+### Looking at calibrations
 
 Flowgraph seem to prefer keeping some tasks on a single thread.
 All of the *Histo-generating* tasks were run on the same thread.
@@ -571,7 +570,7 @@ delays |>
   facet_wrap(vars(same), ncol = 1, scales="free_y")
 ```
 
-## Open Questions
+# Open Questions
 
 1. For function bodies that are serialized, the current implementation imposes serialization on the `flow::function_node` after the join of the tokens and the data.
    This means that data may accumulate at the `flow::function_node`'s input-port buffer, thus reserving the resource for longer than is desired.
