--- a/rfcs/proposed/flow_graph_serializers/README.qmd
+++ b/rfcs/proposed/flow_graph_serializers/README.qmd
@@ -159,7 +159,7 @@ The node body takes an argument for the input data (i.e. `Hits`) and (optionally
 The node body is invoked only when the `rl_function_node` can obtain exclusive access to one of the resource handles provided by each resource-limiter node (and when a `Hits` message has been sent to it).
 Note that because two GPU handles are available, it is possible to parallelize other work with a GPU as only each *invocation* of the node body requires sole access to a GPU handle.
 
-## `resource_limiter_node` class template
+### `resource_limiter_node` class template
 
 The `resource_limiter_node` class template heuristically looks like:
 
@@ -204,18 +204,18 @@ private:
 where `Handle` represents the type of a resource handle for which tokens can be passed throughout the graph.
 With this implementation, the token is simply a pointer to a handle owned by the resource limiter.
 
-### C++20 support
+#### C++20 support
 
 When compiling with a C++ standard of at least C++20, the `resource_limiter` `Handle` template parameter can be constrained to model a resource-handle concept.
 
-## Resource handles
+### Resource handles
 
-### User-defined resource handles
+#### User-defined resource handles
 
 An example of a user-defined resource handle is the `DB` handle discussed above.
 A handle, in principle, can have an arbitrary structure with unlimited interface, so long as ownership of the handle ultimately reside with the `resource_limiter_node`.
 
-### `default_resource_handle`
+#### `default_resource_handle`
 
 For `rl_function_node` function bodies that do not need to access details of the resource, a default policy can be provided:
 
@@ -225,7 +225,7 @@ resource_limiter_node r{g};
 
 This can be useful if a third-party library supports substantial thread-unsafe interface and there is no obvious API that should be attached to the handle.
 
-## `rl_function_node` constructors
+### `rl_function_node` constructors
 
 We imagine the following constructors could exist
 
