--- a/rfcs/proposed/flow_graph_serializers/README.qmd
+++ b/rfcs/proposed/flow_graph_serializers/README.qmd
@@ -260,9 +260,8 @@ The image below depicts a system implemented within the https://github.com/knoep
 
 ![Demonstration of token-based serialization system.](function-serialization.png)
 
-## Performance results
 
-This document provides some analysis of the timing performance of the `rl_function_node` node type as provided in [meld-serial](https://github.com/knoepfel/meld-serial).
+This section provides some analysis of the timing performance of the `rl_function_node` node type as provided in [meld-serial](https://github.com/knoepfel/meld-serial).
 It analyzes a simple data flow with 7 nodes[^1].
 
 * One *Source* (input node) that generates a series of messages.
@@ -304,16 +303,16 @@ A *Stop* event is recorded as the last thing done within the body of the node.
 For each event, we record the *thread* on which the event occurred, the *node* that was executing, the *message* number, and the extra *data* associated with the event.
 The extra data is meaningful only for the *Calibration* nodes; this data is the *DB* handle ID.
 
-The event records are used to form the `events` data frame.
+The event records are used to form the `events` table.
 Each task is associated with both a *Start* and a *Stop* event.
 These times are measured in milliseconds since the start of the first task.
-The `tasks` data frame is formed by pivoting the `events` data frame to have a single row for each task.
+The `tasks` table is formed by pivoting the `events` table to have a single row for each task.
 The *duration* of each task is the difference between the *Stop* and *Start* times, and is also recorded in milliseconds.
 
-The first few rows of the `tasks` data frame are shown in @tbl-read-events below.
+The first few rows of the `tasks` table are shown in @tbl-read-events below.
 ```{r}
 #| label: tbl-read-events
-#| tbl-cap: "First few rows of the `tasks` data frame."
+#| tbl-cap: "First few rows of the `tasks` table."
 #|
 events <- read_times("serial_fanout.tsv")
 
@@ -395,6 +394,7 @@ We also see that the *Source* is serialized, as expected for an input node.
 There is some small idle time after the first firing of the *Source*, and additional delays after the next few firings.
 After the first firing, all the activity for the *Source* moves to a different thread.
 We do not understand the cause of the delays between source firings, or the range of durations of the *Source* tasks.
+It is possible this is related to our use of *spdlog* to log messages.
 
 ```{r}
 longest_source = max(tasks$duration[tasks$node == "Source"])
@@ -465,7 +465,7 @@ tasks |>
 
 ### Looking at calibrations
 
-Flow Graph seem to prefer keeping some tasks on a single thread.
+Flow Graph seems to prefer keeping some tasks on a single thread.
 All of the *Histo-generating* tasks were run on the same thread.
 The same is true for *Generating* and *Histogramming* tasks.
 The calibrations are clustered onto a subset of threads, and are not distributed evenly across those threads.
@@ -543,6 +543,7 @@ We also record, for each delay, whether the previous task on the thread was run 
 We find this is true for the large majority of tasks.
 
 There are a few delays that are much longer than others, as shown in @tbl-long-delays.
+Note that the largest of the delays appears because the *Calibration[C]* node's tasks migrate from one thread to another; this is not a sign of an actual idle period for the sequence of *Calibration[C]* tasks.
 
 ```{r}
 #| label: tbl-long-delays
@@ -574,7 +575,7 @@ delays |>
 
 # Open Questions
 
-1. For function bodies that are serialized, the current implementation imposes serialization on the `flow::function_node` after the join of the tokens and the data.
+1. For node bodies that are serialized, the current implementation imposes serialization on the `flow::function_node` after the join of the tokens and the data.
    This means that data may accumulate at the `flow::function_node`'s input-port buffer, thus reserving the resource for longer than is desired.
    It would be better for the tokens to be returned if the function body is already being executed by another thread.
 2. With the implementation presented here, a live-lock situation may occur for nodes that require access to several limited resources.
