--- a/rfcs/proposed/flow_graph_serializers/README.qmd
+++ b/rfcs/proposed/flow_graph_serializers/README.qmd
@@ -107,17 +107,17 @@ Our proposal, however, does not mandate any implementation but suggests an API s
 using namespace tbb;
 flow::graph g;
 
-resource_limiter_node<DB> db_resource{g, {db_handle()}};
+resource_limiter<DB> db_resource{g, {db_handle()}};
 
 rl_function_node<Hits, Tracks> track_maker{
   g,
   std::tie(db_resource),
-  [](Hits const&, DB const* db) -> Tracks { auto a = db->access(/* okay */); ... }
+  [](Hits const&, token<DB> db) -> Tracks { auto a = db->access(/* okay */); ... }
 };
 rl_function_node<Signals, Clusters> cluster_maker{
   g,
   std::tie(db_resource),
-  [](Signals const&, DB const* db) -> Clusters { auto a = db->access(/* okay */); ... }
+  [](Signals const&, token<DB> db) -> Clusters { auto a = db->access(/* okay */); ... }
 };
 ```
 
@@ -126,11 +126,19 @@ The implementation of the `DB::access()`  function did not change, but by connec
 Note that if the only reason that the bodies of `track_maker` and `cluster_maker` were thread-unsafe was their access to the limited resource indicated by `db_resource` it is no longer necessary to declare that the nodes have concurrency `flow::serial`.
 It may be possible to have the node `track_maker` active at the same time, if the nature of `db_resource` were to allow two handles to be available, and as long as each activation was given a token to a different handle.
 
+## Definitions
+
+We use the following definitions in this proposal:
+
+- *resource*: an entity external to the program for which access may need to be limited (e.g. a file on the file system, a database, a thread-unsafe library)
+- *handle*: the program entity within the program that represents and provides access to the resource (the handle is not copyable as the resource itself cannot be copied)
+- *token*: a small, copyable object passed into a node to grant access to the handle
+
 # Proposal
 
 Our proposal is an addition to what already exists and does not break API backwards compatibility.  The proposal consists of:
-1. Introducing the equivalent of a `resource_limiter_node` class template that, when connected with another node, ensures limited access to the resource it represents.
-2. Adding a `rl_function_node` class template that allow the specification of limited resource nodes instead of (or in addition to) a `concurrency` value.
+1. Adding a `rl_function_node` class template that allows the specification of limited resources instead of (or in addition to) a `concurrency` value.
+2. Introducing the equivalent of a `resource_limiter` class template that, when connected with an `rl_function_node`, ensures limited access to the resource limiter's handles.
 
 > [!NOTE]
 > Although we pattern our proposal on the `flow::function_node` class template in this proposal, the concepts discussed here apply to nearly any flow-graph node that accepts a user-provided node body.
@@ -141,12 +149,12 @@ With the proposal here, in addition to what is written above we imagine the foll
 using namespace tbb;
 flow::graph g;
 
-resource_limiter_node<GPU> gpus{g, {GPU{ /*gpu 1*/ }, GPU{ /*gpu 2*/}}; // Permit access to two GPUs
-resource_limiter_node<ROOT> root{g, {ROOT{...}}};  // Only 1 ROOT handle available
+resource_limiter<GPU> gpus{g, {GPU{ /*gpu 1*/ }, GPU{ /*gpu 2*/}}; // Permit access to two GPUs
+resource_limiter<ROOT> root{g, {ROOT{...}}};  // Only 1 ROOT handle available
 
 rl_function_node fn{g,
                     std::tie(gpus, root), // Edges implicitly created to the required resource limiters
-                    [](Hits const&, GPU const*, ROOT const*) -> Tracks {
+                    [](Hits const&, token<GPU>, token<ROOT>) -> Tracks {
                       // User has access to resource handles as arguments to function body
                       ...
                     }
@@ -156,25 +164,28 @@ rl_function_node fn{g,
 
 The constructor signature for the node is similar to the regular `flow::function_node` constructor signatures, except that instead of a concurrency value, a `std::tuple` of resource limiters is supplied.
 The node body takes an argument for the input data (i.e. `Hits`) and (optionally) an argument corresponding to each limited resource.
-The node body is invoked only when the `rl_function_node` can obtain exclusive access to one of the resource handles provided by each resource-limiter node (and when a `Hits` message has been sent to it).
+The node body is invoked only when the `rl_function_node` can obtain exclusive access to one of the resource handles provided by each resource limiter (and when a `Hits` message has been sent to it).
 Note that because two GPU handles are available, it is possible to parallelize other work with a GPU as only each *invocation* of the node body requires sole access to a GPU handle.
 
-### `resource_limiter_node` class template
+### `resource_limiter` class template
 
-The `resource_limiter_node` class template heuristically looks like:
+The `resource_limiter` class template heuristically looks like:
 
 ```cpp
+template <typename Handle>
+using token = Handle*;
+
 template <typename Handle = default_resource_handle>
-class resource_limiter_node : tbb::flow::buffer_node<Handle const*> {
+class resource_limiter : tbb::flow::buffer_node<token<Handle>> {
 public:
-  using token_type = Handle const*;
+  using token_type = token<Handle>;
 
   /// \brief Constructs a resource_limiter with n_handles of type Handle.
-  resource_limiter_node(tbb::flow::graph& g, unsigned int n_handles = 1) :
+  resource_limiter(tbb::flow::graph& g, unsigned int n_handles = 1) :
     tbb::flow::buffer_node<token_type>{g}, handles_(n_handles)
   {}
   /// \brief Constructs a resource_limiter with explicitly provided handles.
-  resource_limiter_node(tbb::flow::graph& g, std::vector<Handle>&& handles) :
+  resource_limiter(tbb::flow::graph& g, std::vector<Handle>&& handles) :
     tbb::flow::buffer_node<token_type>{g}, handles_(std::move(handles))
   {}
 
@@ -191,7 +202,7 @@ public:
   void activate()
   {
     // Place tokens into the buffer.
-    for (auto const& handle : handles_) {
+    for (auto& handle : handles_) {
       tbb::flow::buffer_node<token_type>::try_put(&handle);
     }
   }
@@ -213,14 +224,14 @@ When compiling with a C++ standard of at least C++20, the `resource_limiter` `Ha
 #### User-defined resource handles
 
 An example of a user-defined resource handle is the `DB` handle discussed above.
-A handle, in principle, can have an arbitrary structure with unlimited interface, so long as ownership of the handle ultimately reside with the `resource_limiter_node`.
+A handle, in principle, can have an arbitrary structure with unlimited interface, so long as ownership of the handle ultimately reside with the `resource_limiter`.
 
 #### `default_resource_handle`
 
 For `rl_function_node` function bodies that do not need to access details of the resource, a default policy can be provided:
 
 ```cpp
-resource_limiter_node r{g};
+resource_limiter r{g};
 ```
 
 This can be useful if a third-party library supports substantial thread-unsafe interface and there is no obvious API that should be attached to the handle.
@@ -236,7 +247,7 @@ flow::graph g;
 // 1. Already discussed above
 rl_function_node fn1{g,
                      std::tie(gpus, root),
-                     [](Hits const&, GPU const*, ROOT const*) -> Tracks { ... }};
+                     [](Hits const&, token<GPU>, token<ROOT>) -> Tracks { ... }};
 
 // 2. No access required to a limited resource (equivalent to flow::function_node)
 rl_function_node fn2{g, flow::unlimited, [](Hits const&) -> Tracks { ... }};
@@ -244,7 +255,7 @@ rl_function_node fn2{g, flow::unlimited, [](Hits const&) -> Tracks { ... }};
 // 3. Access required to a limited resource, and the user body must be serialized
 rl_function_node fn3{g,
                      std::make_tuple(flow::serial, std::ref(db_limiter)),
-                     [](Hit const&, DB const*) -> Tracks{ ... }};
+                     [](Hit const&, token<DB>) -> Tracks{ ... }};
 ```
 
 Constructor 1 has already been discussed.
@@ -262,7 +273,7 @@ The image below depicts a system implemented within the https://github.com/knoep
 
 
 This section provides some analysis of the timing performance of the `rl_function_node` node type as provided in [meld-serial](https://github.com/knoepfel/meld-serial).
-It analyzes a simple data flow with 7 nodes[^1].
+It analyzes a simple data flow with 7 nodes.
 
 * One *Source* (input node) that generates a series of messages.
   Each message is represented by a single integer.
@@ -289,8 +300,6 @@ It analyzes a simple data flow with 7 nodes[^1].
   * one *Calibration[B]* task running and one *Calibration[C]* task running.
 
   But we cannot have two *Calibration[C]* tasks running at the same time.
-
-[^1]: In this discussion, we do not refer to resource-limiter nodes as *nodes* but as *resource limiters*.
 
 The *Source* node is directly connected to each of the other nodes by explicitly calling `make_edge(...)`.
 All edges between the nodes and the resource limiters are created internally within the `rl_function_node` constructor.
